--- a/package.json
+++ b/package.json
@@ -13,10 +13,18 @@
     "react-addons-shallow-compare": "^15.4.1",
     "react-dates": "^4.1.0",
     "react-helmet": "^3.2.2",
+    "cheerio": "^0.22.0",
+    "image-size": "^0.5.0",
+    "mkdirp": "^0.5.1",
+    "node-sass": "^3.11.1",
     "react-responsive-grid": "^0.3.3",
     "react-typography": "^0.15.0",
     "typography": "^0.15.0",
     "typography-theme-wordpress-2016": "^0.15.0",
+    "recursive-readdir": "^2.1.0",
+    "rimraf": "^2.5.4",
+    "safe-access": "^0.1.0",
+    "sync-request": "^3.0.1",
     "underscore.string": "^3.2.3"
   },
   "devDependencies": {
@@ -37,7 +45,7 @@
     "lint": "./node_modules/.bin/eslint --ext .js,.jsx --ignore-pattern public .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "develop": "gatsby develop",
-    "build": "gatsby build",
+    "build": "gatsby build && node ampify.js",
     "deploy": "gatsby build --prefix-links && gh-pages -d public"
   }
 }
